--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,43 @@ project(FastBufferTree)
 
 set(CMAKE_CXX_STANDARD 11)
 
+#Find or download GTest
+find_package(GTest CONFIG)
+if(NOT GTest_FOUND)
+  if(NOT AUTODOWNLOAD)
+    message(FATAL_ERROR "GTest config not found.\n"
+      "Set GTest_DIR to a directory containing one of \n"
+      "  GTestConfig.cmake\n"
+      "  gtest-config.cmake\n"
+      "or use -DAUTODOWNLOAD:BOOL=ON to automatically download")
+  else()
+    #Download googletest
+    download_project(
+      PROJ googletest
+      GIT_REPOSITORY "https://github.com/google/googletest.git"
+      GIT_TAG "release-1.10.0"
+    )
+
+    #As specified in the googletest docs, need to set
+    #gtest_force_shared_crt for windows visual studio.
+    if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+      set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    endif()
+
+    add_subdirectory(
+      "${googletest_SOURCE_DIR}"
+      "${googletest_BINARY_DIR}"
+      EXCLUDE_FROM_ALL
+    )
+
+    #Add aliases to targets
+    add_library(GTest::gtest ALIAS gtest)
+    add_library(GTest::gtest_main ALIAS gtest_main)
+    add_library(GTest::gmock ALIAS gmock)
+    add_library(GTest::gmock_main ALIAS gmock_main)
+  endif()
+endif()
+
 add_library(FastBufferTree
     buffer_tree.cpp
     include/buffer_tree.h
