--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -61,4 +61,4 @@ jobs:
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ./test
+      run: ./buffertree_tests
