fixed include files to actually be added and removed some unnecessary files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,10 +64,7 @@ add_library(FastBufferTree
     include/buffer_tree.h
     src/buffer_control_block.cpp
     include/buffer_control_block.h
-    include/update.h 
-    src/sketch_write_manager.cpp 
-    include/sketch_write_manager.h 
-    include/sketch.h)
+    include/update.h)
 target_link_libraries(FastBufferTree PRIVATE GTest::gtest)
 # optimize unless debug
 if (DEFINED ENV{DEBUG})
@@ -85,9 +82,9 @@ if (UNIX AND NOT APPLE)
   message("Enabling Fallocate for a linux system")
   target_compile_options(FastBufferTree PRIVATE -DHAVE_FALLOCATE)
 endif ()
-set_target_properties(FastBufferTree PROPERTIES PUBLIC_HEADER include/buffer_tree.h)
-set_target_properties(FastBufferTree PROPERTIES PUBLIC_HEADER include/update.h)
-set_target_properties(FastBufferTree PROPERTIES PUBLIC_HEADER include/buffer_control_block.h)
+set_target_properties(FastBufferTree PROPERTIES PUBLIC_HEADER 
+  "include/buffer_tree.h;include/buffer_control_block.h;include/update.h"
+)
 
 add_executable(buffertree_tests
   test/runner.cpp
@@ -124,7 +121,7 @@ endif ()
 
 #uncomment if manually installing project
 #without specifying INSTALL_PREFIX elsewhere
-#set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/BufferTree/prefix)
+set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/BufferTree/prefix)
 
 # for use when building as an external project
 install(TARGETS FastBufferTree
