--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,8 @@ add_library(FastBufferTree
     include/buffer_tree.h
     src/buffer_control_block.cpp
     include/buffer_control_block.h
+    src/circular_queue.cpp
+    include/circular_queue.h
     include/update.h)
 target_link_libraries(FastBufferTree PRIVATE GTest::gtest)
 # optimize unless debug
@@ -83,7 +85,7 @@ if (UNIX AND NOT APPLE)
   target_compile_options(FastBufferTree PRIVATE -DHAVE_FALLOCATE)
 endif ()
 set_target_properties(FastBufferTree PROPERTIES PUBLIC_HEADER 
-  "include/buffer_tree.h;include/buffer_control_block.h;include/update.h"
+  "include/buffer_tree.h;include/buffer_control_block.h;include/circular_queue.h;include/update.h"
 )
 
 add_executable(buffertree_tests
