--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -38,7 +38,9 @@ jobs:
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
-      run: cmake -E make_directory ${{github.workspace}}/build
+      run: |
+        cmake -E make_directory ${{github.workspace}}/build
+        sudo apt install -y valgrind
 
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
@@ -62,3 +64,7 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ./buffertree_tests
+    - name: Memory Test
+      working-directory: ${{github.workspace}}/build
+      shell: bash
+      run: valgrind --leak-check=full ./buffertree_tests
