feat: add fcntl support for apple

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,9 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
 elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
   message("Adding MSVC compiler flags")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Wall")
+elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
+  message("Adding AppleClang compiler flags")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall")
 else()
   message("${CMAKE_CXX_COMPILER_ID} not recognized, no flags added")
 endif()
@@ -73,16 +76,22 @@ if (DEFINED ENV{DEBUG})
   message("Disabling optimizations and enabling debug symbols")
   target_compile_options(FastBufferTree PRIVATE -g)
 else ()
-  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
     target_compile_options(FastBufferTree PRIVATE -O3)
   elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
     target_compile_options(FastBufferTree PRIVATE /O2)
 endif()
 endif()
-# are we running in linux?
+# different OSes have different ways of efficiently pre-allocating large files
 if (UNIX AND NOT APPLE)
   message("Enabling Fallocate for a linux system")
-  target_compile_options(FastBufferTree PRIVATE -DHAVE_FALLOCATE)
+  target_compile_options(FastBufferTree PRIVATE -DLINUX_FALLOCATE)
+elseif(WIN32)
+  message("Using fileapi for Windows")
+  target_compile_options(FastBufferTree PRIVATE -DWINDOWS_FILEAPI)
+else()
+  message("Using fcntl for an Apple or other unknown system")
+  target_compile_options(FastBufferTree PRIVATE -DPOSIX_FCNTL)
 endif ()
 set_target_properties(FastBufferTree PROPERTIES PUBLIC_HEADER 
   "include/buffer_tree.h;include/buffer_control_block.h;include/circular_queue.h;include/update.h"
@@ -97,7 +106,7 @@ if (DEFINED ENV{DEBUG})
   message("Disabling optimizations and enabling debug symbols")
   target_compile_options(buffertree_tests PRIVATE -g)
 else ()
-  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
     target_compile_options(buffertree_tests PRIVATE -O3)
   elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
     target_compile_options(buffertree_tests PRIVATE /O2)
@@ -113,7 +122,7 @@ if (DEFINED ENV{DEBUG})
   message("Disabling optimizations and enabling debug symbols")
   target_compile_options(buffer_experiment PRIVATE -g)
 else ()
-  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
     target_compile_options(buffer_experiment PRIVATE -O3)
   elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
     target_compile_options(buffer_experiment PRIVATE /O2)
