--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -40,12 +40,17 @@ jobs:
         cmake -DCMAKE_INSTALL_PREFIX=${{runner.workspace}}/install ..
         cmake --build . --target install
         
-    - name: Create Build Environment
-      # Some projects don't allow in-source building, so create a separate build directory
-      # We'll use this as our working directory for all subsequent commands
+    - name: Create Build Environment (Ubuntu)
+      if: matrix.os == 'ubuntu-latest'
       run: |
         cmake -E make_directory ${{github.workspace}}/build
         sudo apt install -y valgrind
+
+    - name: Create Build Environment (Not Ubuntu)
+      if: matrix.os != 'ubuntu-latest'
+      # no need to run valgrind more than once
+      run: |
+        cmake -E make_directory ${{github.workspace}}/build
 
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
@@ -69,7 +74,9 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ./buffertree_tests
-    - name: Memory Test
+
+    - name: Memory Test (
+      if: matrix.os == 'ubuntu-latest'
       working-directory: ${{github.workspace}}/build
       shell: bash
       run: valgrind --leak-check=full ./buffertree_tests
