initial renaming and addition of standalone gutters

--- a/example_buffering.conf
+++ b/example_buffering.conf
@@ -10,3 +10,6 @@ queue_factor=8
 
 # Our write granularity is this factor multiplied by system page size
 page_factor=5
+
+# For Standalone Gutters reduce the queue size by this divisor (1 = full, 2 = half ...)
+gutter_factor=1
