--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -73,10 +73,10 @@ jobs:
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ./buffertree_tests
+      run: ./buffering_tests
 
     - name: Memory Test (
       if: matrix.os == 'ubuntu-latest'
       working-directory: ${{github.workspace}}/build
       shell: bash
-      run: valgrind --leak-check=full ./buffertree_tests
+      run: valgrind --leak-check=full ./buffering_tests
