--- a/example_buffering.conf
+++ b/example_buffering.conf
@@ -2,7 +2,7 @@
 # Example: using a buffer_exp of 20 is a MB
 buffer_exp=22
 
-# The fanout of the BufferTree
+# The fanout of the GutterTree
 branch=512
 
 # How many slots to have in the queue per worker
@@ -15,5 +15,8 @@ page_factor=5
 # Total threads for buffering becomes main_thread + num_threads
 num_threads=1
 
-# For Standalone Gutters reduce the queue size by this divisor (1 = full, 2 = half ...)
+# Change the leaf gutter size by this factor
+# Positive numbers increase size (1 = full,  2 = double ...)
+# Negative numbers reduce size   (-1 = full, -2 = half, ...)
+# Can use floats to be more fine-grained 1.5 = 50% larger
 gutter_factor=1
