--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -75,7 +75,7 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ./buffering_tests
 
-    - name: Memory Test (
+    - name: Memory Test (Ubuntu only)
       if: matrix.os == 'ubuntu-latest'
       working-directory: ${{github.workspace}}/build
       shell: bash
