--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,16 +13,16 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 #set(ENV{DEBUG} ON)
 
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-  message("Adding GNU compiler flags")
+  message(STATUS "Adding GNU compiler flags")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall")
 elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-  message("Adding MSVC compiler flags")
+  message(STATUS "Adding MSVC compiler flags")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Wall")
 elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
-  message("Adding AppleClang compiler flags")
+  message(STATUS "Adding AppleClang compiler flags")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall")
 else()
-  message("${CMAKE_CXX_COMPILER_ID} not recognized, no flags added")
+  message(STATUS "${CMAKE_CXX_COMPILER_ID} not recognized, no flags added")
 endif()
 
 message("${CMAKE_MODULE_PATH}")
@@ -69,13 +69,13 @@ add_dependencies(GutterTree GraphZeppelinCommon)
 target_link_libraries(GutterTree PUBLIC gtest GraphZeppelinCommon)
 # different OSes have different ways of efficiently pre-allocating large files
 if (UNIX AND NOT APPLE)
-  message("Enabling Fallocate for a linux system")
+  message(STATUS "Enabling Fallocate for a linux system")
   target_compile_options(GutterTree PRIVATE -DLINUX_FALLOCATE)
 elseif(WIN32)
-  message("Using fileapi for Windows")
+  message(STATUS "Using fileapi for Windows")
   target_compile_options(GutterTree PRIVATE -DWINDOWS_FILEAPI)
 else()
-  message("Using fcntl for an Apple or other unknown system")
+  message(STATUS "Using fcntl for an Apple or other unknown system")
   target_compile_options(GutterTree PRIVATE -DPOSIX_FCNTL)
 endif ()
 target_include_directories(GutterTree PUBLIC include/)
