updates to get ready for adding the cache guttertree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,18 +65,21 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(googletest GraphZeppelinCommon)
 
 add_library(GutterTree
-    include/buffering_system.h
-    src/gutter_tree.cpp
-    include/gutter_tree.h
-    src/buffer_control_block.cpp
-    include/buffer_control_block.h
-    src/buffer_flusher.cpp
-    include/buffer_flusher.h
-    src/standalone_gutters.cpp
-    include/standalone_gutters.h
-    src/work_queue.cpp
-    include/work_queue.h
-    include/types.h)
+  src/buffering_system.cpp
+  include/buffering_system.h
+  src/gutter_tree.cpp
+  include/gutter_tree.h
+  src/buffer_control_block.cpp
+  include/buffer_control_block.h
+  src/buffer_flusher.cpp
+  include/buffer_flusher.h
+  src/standalone_gutters.cpp
+  include/standalone_gutters.h
+  # src/cache_gutter_tree.cpp
+  # include/cache_gutter_tree.h
+  src/work_queue.cpp
+  include/work_queue.h
+  include/types.h)
 add_dependencies(GutterTree GraphZeppelinCommon)
 target_link_libraries(GutterTree PUBLIC gtest GraphZeppelinCommon)
 # different OSes have different ways of efficiently pre-allocating large files
@@ -97,6 +100,7 @@ if (BUILD_EXE)
     test/runner.cpp
     test/gutter_tree_test.cpp
     test/standalone_gutters_test.cpp)
+    #test/cache_gutter_tree_test.cpp
   target_link_libraries(buffering_tests PRIVATE GutterTree)
 
   add_executable(buffering_experiment
