--- a/example_buffering.conf
+++ b/example_buffering.conf
@@ -16,7 +16,7 @@ page_factor=5
 num_threads=1
 
 # Change the leaf gutter size by this factor
-# Positive numbers increase size (1 = full,  2 = double ...)
+# Positive numbers increase size (1 = full,  2 = double, ...)
 # Negative numbers reduce size   (-1 = full, -2 = half, ...)
 # Can use floats to be more fine-grained 1.5 = 50% larger
 gutter_factor=1
