--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -44,7 +44,7 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: |
         cmake -E make_directory ${{github.workspace}}/build
-        sudo apt install -y valgrind
+        sudo apt-get install -y valgrind
 
     - name: Create Build Environment (Not Ubuntu)
       if: matrix.os != 'ubuntu-latest'
