initial work queue LL implementation. Only works for StandAloneGutters currently.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,20 +61,20 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(googletest GraphZeppelinCommon)
 
 add_library(GutterTree
-  src/guttering_system.cpp
-  include/guttering_system.h
-  src/gutter_tree.cpp
-  include/gutter_tree.h
-  src/buffer_control_block.cpp
-  include/buffer_control_block.h
-  src/buffer_flusher.cpp
-  include/buffer_flusher.h
-  src/standalone_gutters.cpp
-  include/standalone_gutters.h
-  src/cache_gutter_tree.cpp
-  include/cache_gutter_tree.h
   src/work_queue.cpp
   include/work_queue.h
+  src/guttering_system.cpp
+  include/guttering_system.h
+  # src/gutter_tree.cpp
+  # include/gutter_tree.h
+  # src/buffer_control_block.cpp
+  # include/buffer_control_block.h
+  # src/buffer_flusher.cpp
+  # include/buffer_flusher.h
+  src/standalone_gutters.cpp
+  include/standalone_gutters.h
+  # src/cache_gutter_tree.cpp
+  # include/cache_gutter_tree.h
   include/types.h)
 add_dependencies(GutterTree GraphZeppelinCommon)
 target_link_libraries(GutterTree PUBLIC gtest GraphZeppelinCommon)
@@ -94,14 +94,15 @@ target_include_directories(GutterTree PUBLIC include/)
 if (BUILD_EXE)
   add_executable(buffering_tests
     test/runner.cpp
-    test/gutter_tree_test.cpp
+    # test/gutter_tree_test.cpp
     test/standalone_gutters_test.cpp
-    test/cache_gutter_tree_test.cpp)
+    # test/cache_gutter_tree_test.cpp
+  )
   target_link_libraries(buffering_tests PRIVATE GutterTree)
 
-  add_executable(buffering_experiment
-    experiment/runner.cpp
-    experiment/gutter_tree_exp.cpp
-    experiment/standalone_exp.cpp)
-  target_link_libraries(buffering_experiment PRIVATE GutterTree)
+  # add_executable(buffering_experiment
+  #   experiment/runner.cpp
+  #   experiment/gutter_tree_exp.cpp
+  #   experiment/standalone_exp.cpp)
+  # target_link_libraries(buffering_experiment PRIVATE GutterTree)
 endif()
