CMakeLists.txt cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,13 +78,14 @@ add_library(GutterTree
   include/types.h)
 add_dependencies(GutterTree GraphZeppelinCommon)
 target_link_libraries(GutterTree PUBLIC gtest GraphZeppelinCommon)
+target_link_options(GutterTree PUBLIC -fopenmp)
 # different OSes have different ways of efficiently pre-allocating large files
 if (UNIX AND NOT APPLE)
   message(STATUS "Enabling Fallocate for a linux system")
-  target_compile_options(GutterTree PRIVATE -fopenmp -DLINUX_FALLOCATE)
+  target_compile_options(GutterTree PRIVATE -DLINUX_FALLOCATE)
 elseif(WIN32)
   message(STATUS "Using fileapi for Windows")
-  target_compile_options(GutterTree PRIVATE -fopenmp -DWINDOWS_FILEAPI)
+  target_compile_options(GutterTree PRIVATE -DWINDOWS_FILEAPI)
 else()
   message(STATUS "Using fcntl for an Apple or other unknown system")
   target_compile_options(GutterTree PRIVATE -DPOSIX_FCNTL)
@@ -104,11 +105,4 @@ if (BUILD_EXE)
   #   experiment/gutter_tree_exp.cpp
     experiment/standalone_exp.cpp)
   target_link_libraries(buffering_experiment PRIVATE GutterTree)
-	if (UNIX AND NOT APPLE)
-		target_link_options(buffering_tests PUBLIC -fopenmp)
-		target_link_options(buffering_experiment PUBLIC -fopenmp)
-	elseif(WIN32)
-		target_link_options(buffering_tests PUBLIC -fopenmp)
-		target_link_options(buffering_experiment PUBLIC -fopenmp)
-	endif ()
 endif()
