--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,7 @@ target_link_libraries(GutterTree PUBLIC gtest GraphZeppelinCommon)
 if (UNIX AND NOT APPLE)
   message(STATUS "Enabling Fallocate for a linux system")
   target_link_options(GutterTree PUBLIC -fopenmp)
-  target_compile_options(GutterTree PRIVATE -DLINUX_FALLOCATE)
+  target_compile_options(GutterTree PRIVATE -fopenmp -DLINUX_FALLOCATE)
 elseif(WIN32)
   message(STATUS "Using fileapi for Windows")
   target_compile_options(GutterTree PRIVATE -DWINDOWS_FILEAPI)
